[package]
name = "object-data-structure"
version = "1.0.5"
authors = ["Ryandw11 <ryandw11@ryandw11.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
container_types = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
byteorder = "1.4.3"